feat: s3 삭제 오류 무시 로직 추가